<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".helper.User_roll">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.weship.mover.Fontclasses.Weshiptextviewbold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/i_am_a"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/ll_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/circle_black"
                    android:padding="20dp"
                    android:src="@drawable/ic_specialist_user" />

                <com.weship.mover.Fontclasses.Weshiptextviewbold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/five_dp"
                    android:gravity="center"
                    android:text="@string/customer"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.weship.mover.Fontclasses.Weshiptextviewregular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/i_want_to_ship_one_or_more_of_my_own_vehicles"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_broker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/circle_black"
                    android:padding="20dp"
                    android:src="@drawable/ic_male_telemarketer" />

                <com.weship.mover.Fontclasses.Weshiptextviewbold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/five_dp"
                    android:gravity="center"
                    android:text="@string/broker"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.weship.mover.Fontclasses.Weshiptextviewregular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/i_want_to_connect_customers_to_carriers_in_my_network"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/carrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/five_dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/circle_black"
                    android:padding="20dp"
                    android:src="@drawable/ic_carrier_large" />

                <com.weship.mover.Fontclasses.Weshiptextviewbold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5sp"
                    android:gravity="center"
                    android:text="@string/carrier"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.weship.mover.Fontclasses.Weshiptextviewregular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/i_want_to_ship_customer_vehicles_and_organize_my_trips"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>