<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.10"
            android:gravity="center">
            <com.weship.mover.Fontclasses.Weshiptextviewbold
                android:id="@+id/listnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/num_2"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/listTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.80"
            android:gravity="center">
            <com.weship.mover.Fontclasses.Weshiptextviewbold
                android:id="@+id/listname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/active_bids"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAllCaps="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.10"
            android:gravity="right|center">
            <ImageView
                android:id="@+id/listicon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_drop_down" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/ten_dp"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center|start">
            <com.weship.mover.Fontclasses.Weshiptextviewbold
                android:id="@+id/mk_mdl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mk_mdl"
                android:gravity="center|start"
                android:textAllCaps="true"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center|start"
            android:orientation="horizontal"
            >
            <com.weship.mover.Fontclasses.Weshiptextviewbold
                android:id="@+id/origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orgin_des"
                android:textAllCaps="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.30">
            <com.weship.mover.Fontclasses.Weshiptextviewbold
                android:id="@+id/bids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/del_window"
                android:gravity="center"
                android:textAllCaps="true"
                android:src="@drawable/ic_arrow_drop_down"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:layout_gravity="center"
            android:gravity="center">

            <com.weship.mover.Fontclasses.Weshiptextviewbold
                android:id="@+id/view_carrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_drop_down"
                android:text="@string/vw_carrier"
                android:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginLeft="@dimen/five_dp"
        android:layout_marginRight="@dimen/five_dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/five_dp"
        android:background="@color/black" />
</LinearLayout>
