<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/expandedListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center|start">
            <com.weship.mover.Fontclasses.Weshiptextviewregular
                android:id="@+id/mk_mdl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/mk_mdl"
                android:textAllCaps="true"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.30"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <com.weship.mover.Fontclasses.Weshiptextviewregular
                android:id="@+id/origin_des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/orgin"
                android:textAllCaps="true"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.30"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <com.weship.mover.Fontclasses.Weshiptextviewregular
            android:id="@+id/del_window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/destion"
            android:textAllCaps="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center"
            android:weightSum="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:text="@string/view"
                android:textColor="@color/white"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginLeft="@dimen/five_dp"
        android:layout_marginRight="@dimen/five_dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/five_dp"
        android:background="@color/black" />
</LinearLayout>
