<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">
    <LinearLayout
        android:id="@+id/expandedListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/ten_dp"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.30"
            android:gravity="center|start">
            <com.weship.mover.Fontclasses.Weshiptextviewregular
                android:id="@+id/mk_mdl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/mk_mdl"
                android:textAllCaps="true"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
            <com.weship.mover.Fontclasses.Weshiptextviewregular
                android:id="@+id/origin"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/orgin_des"
                android:textAllCaps="true"/>
            <!--
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:src="@drawable/ic_arrow_forward"/>
                -->
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:gravity="center"
            android:weightSum="1"
            android:orientation="vertical">
            <com.weship.mover.Fontclasses.Weshiptextviewregular
                android:id="@+id/bids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/five_dp"
                android:text="@string/bid"
                android:src="@drawable/ic_arrow_drop_down"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:text="@string/view_bids"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginLeft="@dimen/five_dp"
        android:layout_marginRight="@dimen/five_dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/five_dp"
        android:background="@color/black" />
</LinearLayout>
